ViewPager added to main activity Change Password activity created improvements on strings and dimens files.

--- a/MyBink/app/src/main/AndroidManifest.xml
+++ b/MyBink/app/src/main/AndroidManifest.xml
@@ -40,6 +40,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".view.MainActivity" />
         </activity>
+        <activity android:name=".view.ChangePasswordActivity"
+            android:label="@string/change_password"
+            android:parentActivityName=".view.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".view.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
