--- a/MyBink/app/build.gradle
+++ b/MyBink/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.android.support:support-v4:25.1.1'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
