--- a/MyBink/app/src/main/AndroidManifest.xml
+++ b/MyBink/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.dashboard.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -27,25 +27,25 @@
         <activity
             android:name=".view.BarcodeScanActivity"
             android:label="@string/scan_barcode"
-            android:parentActivityName=".view.MainActivity"
+            android:parentActivityName=".view.dashboard.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".view.MainActivity" />
+                android:value=".view.dashboard.MainActivity" />
         </activity>
         <activity
             android:name=".view.ShowFlagsActivity"
-            android:parentActivityName=".view.MainActivity">
+            android:parentActivityName=".view.dashboard.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".view.MainActivity" />
+                android:value=".view.dashboard.MainActivity" />
         </activity>
         <activity android:name=".view.ChangePasswordActivity"
             android:label="@string/change_password"
-            android:parentActivityName=".view.MainActivity">
+            android:parentActivityName=".view.dashboard.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".view.MainActivity" />
+                android:value=".view.dashboard.MainActivity" />
         </activity>
     </application>
 
