--- a/MyBink/app/build.gradle
+++ b/MyBink/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.gvillani:pinnedlist:0.9.2'
+    compile 'com.android.support:cardview-v7:25.1.0'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
